Still images, spellcheck

--- a/slides.html
+++ b/slides.html
@@ -123,7 +123,7 @@ Related work in [Laa, Cook, Buja, Valencia (2020)](https://arxiv.org/abs/2004.13
 
 
 - To understand the piling near the center of projections, we can think about the high-dimensional volume projected onto a 2D area
-- To impose rotation invariance and avoide edge effects, we start from a hypersphere in p dimensions
+- To impose rotation invariance and avoid edge effects, we start from a hypersphere in p dimensions
 
 &lt;br&gt;
 
@@ -138,7 +138,7 @@ Related work in [Laa, Cook, Buja, Valencia (2020)](https://arxiv.org/abs/2004.13
 
 
 - To understand the piling near the center of projections, we can think about the high-dimensional volume projected onto a 2D area
-- To impose rotation invariance and avoide edge effects, we start from a hypersphere in p dimensions
+- To impose rotation invariance and avoid edge effects, we start from a hypersphere in p dimensions
 
 &lt;br&gt;
 
@@ -199,14 +199,19 @@ The new transformation is especially useful combined with a tour display, showin
 &lt;img src="gifs/mouse_grand_2c.gif" width="400"/&gt; &lt;img src="gifs/mouse_sage_2c_gam3.gif" width="400"/&gt;
 ]
 ---
+## Clustering in high dimensions: Single Cell Mouse Retina Data
+
+&lt;img src="slides_files/figure-html/unnamed-chunk-1-1.png" width="95%" style="display: block; margin: auto;" /&gt;
+
+---
 ## Discussion &amp; Outlook
 
 &lt;br&gt;
 
-- We introduced a new display that is useful when visualising high-dimensional data in low-dimensional projections
+- We introduced a new display that is useful when visualizing high-dimensional data in low-dimensional projections
 - This is especially useful in combination with a tour, implemented as the **sage tour** display
 - A related approach is the **slice tour**
-- These new displays are complementary to non-linear dimension reduction methods for visualisation, e.g. t-SNE
+- These new displays are complementary to non-linear dimension reduction methods for visualization, e.g. t-SNE
 - The displays should be implemented in an interactive interface for efficient tuning
 - We can also think of new transformation and slicing methods
     </textarea>
